# shibboleth

./: .gitignore  LICENSE  Pipfile  README.md  README.rst  pyproject.toml  release.sh  setup.py  shibboleth.py  test_release.sh  test_shibboleth.py
_test/: asdf[20221029~161639 inbox].md  blarp[20221029~161651 inbox].md
