[build-system]
requires = ["setuptools"]

[project]
name = "shibboleth"
description = "Command line tool for tracking tasks"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["cli", "task", "tracking", "commandline", "productivity"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "shibboleth.__version__"}

[project.scripts]
shibboleth = "shibboleth:run"
